<h5>1.70 Beta 1      [2017-05-23]</h5>
<hr>
- XOOPS 2.5.9, PHP 7 (mamba)
- removed @version (mamba)
- PSR-2 code cosmetics (mamba)
- addNavigation(basename(__FILE__))  (mamba)
- dirname(__FILE__) to __DIR__ (mamba)
- replaced < br /> with < br > (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- Hardening to type safe (mamba)
- update Help (mamba)
- changed _handler to Handler (mamba)
- removed '/' from void HTML elements (&lt;br&gt;, &lt;img&gt;, etc) (mamba)
- HTML 5: removed 'selected' and 'checked' (mamba)
- updated file headers for consistency (mamba)
- renamed several $indexAdmin with $adminObject for consistency (mamba)
- Updates for PayPal changes (zyspec)
- fixed rating check (aerograf)
- moved functions to Utility class (mamba)
- started conversion to XMF (mamba)
    - updated addInfoBoxLine entries (mamba)
    - displayNavigation(basename(__FILE__))  (mamba)
    - changed to ->displayButton('left') (mamba)
- CSS file location fixes (aerograf)

<h5>1.61 Beta 1      [NOT RELEASED]</h5>
<hr>
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- changed intval() to (int) (mamba)
- changed dirname(__FILE__) to __DIR__ (mamba)
- code cosmetics (mamba)
- naming consistently language variables (mamba)
- Fixing Rating (trabis)


<h5>1.60            [2012-12-18]</h5>
<hr>
- Conversion to XOOPS 2.5.0 GUI (mamba)
- converting to dynamic Editor selection (mamba)
- fixing date issues-


<h5>1.50 23     [August 2004]</h5>
<hr>
This is version 1.5 of Soapbox. Actually, this is NOT the full version, but a stripped down one. It includes all the necessary files to run the module, but for the sake of keeping the size small, it has left out:

+ The language files, which will be available in a separate download once the debugging is complete.
+ The help files, which I still have to update and which will also be available in a separate download in different formats.